--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -176,7 +176,7 @@
 				                <!-- <img class="profile-img" src="../images/nophoto.png"
 				                    alt=""> -->
 				                <img src="../images/FINAL_LOGO1.png" style="width: 80%; margin: 0 0 0 10%;">
-				                <form class="form-signin" action="http://localhost:8081/user/auth" method="post">
+				                <form class="form-signin" action="/user/auth" method="post">
 					                <input type="text" class="form-control" placeholder="Email" name="username" required autofocus>
 					                <input type="password" class="form-control" placeholder="Password" name="password" required>
 					                <button class="btn btn-lg btn-danger btn-block" type="submit">
