--- a/views/register.hbs
+++ b/views/register.hbs
@@ -36,7 +36,7 @@
                     			</div>
                     		{{/each}}
                     	{{/if}} -->
-	                    <form role="form" method="post" action="http://localhost:8081/user/register">
+	                    <form role="form" method="post" action="/user/register">
 	                    	<div class="form-group required-field-block">
 	                    		<label class="sr-only" for="name_of_business">Name of Business</label>
 	                        	<input type="text" name="name_of_business" placeholder="Name of Business" class="form-control {{{registerclass.name_of_business.class}}}" id="name_of_business">
