--- a/views/interest.hbs
+++ b/views/interest.hbs
@@ -10,7 +10,7 @@
                     <div style="width: 100%; height: 10px;"></div>
                     <div class="description">
                     	<!-- sorry... hidden Customer ID -->
-                    	<input type="text" id="hidden_customerid" value="{{{user_data.insertId}}}" />
+                    	<input type="hidden" id="hidden_customerid" value="{{{user_data.insertId}}}" />
                     	<!-- Plans -->
 					    <section id="plans">
 					        <div class="container">
