--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,7 +47,8 @@
 			<p>IGNITION IS COMMUNITY FILLED WITH LIKE-MINDED AND PRODUCTIVE ENTREPRENEURS AND PROFESSIONALS THAT COMPLIMENT EACH OTHER. THE ENVIRONMENT MAKES IT EASY FOR MEMBERS TO COOPERATE AND COORDINATE TO PURSUE BUSINESS PROJECTS.</p>
 		</div>
 		<div>
-			<button class="btn btn-danger custom-button" data-toggle="modal" data-target="#LoginModal">IGNITE YOUR BUSINESS TODAY</button>
+			<!-- <button class="btn btn-danger custom-button" data-toggle="modal" data-target="#LoginModal">IGNITE YOUR BUSINESS TODAY</button> -->
+			<a href="./user/signin"><button class="btn btn-danger custom-button">IGNITE YOUR BUSINESS TODAY</button></a>
 		</div>
 	</div>
 </div>
