changed profile menu item

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -46,9 +46,51 @@
 					<ul class="nav navbar-nav navbar-right">
 						{{#if profile}}
 						<li><a href="/dashboard">DASHBOARD</a></li>
-						<li><a href="/profile">PROFILE</a></li>
 						<li><a href="/community">COMMUNITY</a></li>
-						<li><a href="/logout">LOGOUT</a></li>
+						<li class="dropdown">
+		                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+		                        <span class="glyphicon glyphicon-user"></span> 
+		                        <strong>{{{profile.data.contact_person}}}</strong>
+		                        <span class="glyphicon glyphicon-chevron-down"></span>
+		                    </a>
+		                    <ul class="dropdown-menu">
+		                        <li>
+		                            <div class="navbar-login">
+		                                <div class="row">
+		                                    <div class="col-lg-4">
+		                                        <p class="text-center">
+		                                            <span class="glyphicon glyphicon-user icon-size"></span>
+		                                        </p>
+		                                    </div>
+		                                    <div class="col-lg-8">
+		                                        <p class="text-left"><strong>{{{profile.data.contact_person}}}</strong></p>
+		                                        <p class="text-left small">{{{profile.data.email_address}}}</p>
+		                                        <p class="text-left">
+		                                            <a href="/profile" class="btn btn-primary btn-block btn-sm">View Profile</a>
+		                                        </p>
+		                                    </div>
+		                                </div>
+		                            </div>
+		                        </li>
+		                        <li class="divider"></li>
+		                        <li>
+		                            <div class="navbar-login navbar-login-session">
+		                                <div class="row">
+		                                    <div class="col-lg-6">
+		                                        <p>
+		                                            <a href="#" class="btn btn-info btn-block">Reset Password</a>
+		                                        </p>
+		                                    </div>
+		                                    <div class="col-lg-6">
+		                                        <p>
+		                                            <a href="/logout" class="btn btn-danger btn-block">Logout</a>
+		                                        </p>
+		                                    </div>
+		                                </div>
+		                            </div>
+		                        </li>
+		                    </ul>
+		                </li>
 						{{else}}
 						<li><a href="#home">ABOUT</a></li>
 						<!-- <li class="active"><a href="#space">SPACE</a></li> -->
@@ -58,6 +100,7 @@
 						<li><a href="#capital">CAPITAL</a></li>
 						<li><a href="#stories">STORIES</a></li>
 						<li><a href="/user/signin">SIGNIN</a></li>
+
 						{{/if}}
 					</ul>
 				</div>
