--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1440,3 +1440,22 @@ END PANEL OPTIONS
 .need-help {
   margin-top: 10px;
 }
+
+.navbar-login
+{
+    width: 305px;
+    padding: 10px;
+    padding-bottom: 0px;
+}
+
+.navbar-login-session
+{
+    padding: 10px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
+.icon-size
+{
+    font-size: 87px;
+}
