--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -49,7 +49,7 @@
 						<li><a href="/community">COMMUNITY</a></li>
 						<li class="dropdown">
 		                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-		                        <span class="glyphicon glyphicon-user"></span> 
+		                       <!--  <span class="glyphicon glyphicon-user"></span>  -->
 		                        <strong>{{{profile.data.contact_person}}}</strong>
 		                        <span class="glyphicon glyphicon-chevron-down"></span>
 		                    </a>
@@ -72,22 +72,19 @@
 		                                </div>
 		                            </div>
 		                        </li>
-		                        <li class="divider"></li>
 		                        <li>
-		                            <div class="navbar-login navbar-login-session">
-		                                <div class="row">
-		                                    <div class="col-lg-6">
-		                                        <p>
-		                                            <a href="#" class="btn btn-info btn-block">Reset Password</a>
-		                                        </p>
-		                                    </div>
-		                                    <div class="col-lg-6">
-		                                        <p>
-		                                            <a href="/logout" class="btn btn-danger btn-block">Logout</a>
-		                                        </p>
-		                                    </div>
-		                                </div>
-		                            </div>
+		                            <div class="navbar-footer">
+                                        <div class="navbar-footer-content">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <a href="#" class="btn btn-default btn-sm">Change Passowrd</a>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <a href="/logout" class="btn btn-default btn-sm pull-right">Sign Out</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
 		                        </li>
 		                    </ul>
 		                </li>
