--- a/views/index.hbs
+++ b/views/index.hbs
@@ -112,7 +112,12 @@
 						<div class="col-lg-5 col-md-5 col-sm-6 col-xs-7">
 							<div class="row push-right">
 								<div class="col-lg-2 col-sm-2 col-xs-3">
-									<div class="hexagon-sm"></div>
+									<div class="hexagon-sm">
+										<div style="width: 100%; height: 100%; padding: 2% 5% 2% 5%">
+											<img src="../images/icons/g4265.png" style="width: 100%; height: 100%;">	
+										</div>
+										
+									</div>
 									<div class="hr">
 									    <div class="line"></div>
 									</div>
@@ -123,7 +128,11 @@
 							</div>
 							<div class="row push-right">
 								<div class="col-lg-2 col-sm-2 col-xs-3">
-									<div class="hexagon-sm"></div>
+									<div class="hexagon-sm">
+										<div style="width: 100%; height: 100%; padding: 2% 5% 2% 5%">
+											<img src="../images/icons/path4275.png" style="width: 100%; height: 100%;">
+										</div>
+									</div>
 									<div class="hr">
 									    <div class="line"></div>
 									    <div class="line"></div>
@@ -136,7 +145,11 @@
 							</div>
 							<div class="row push-right">
 								<div class="col-lg-2 col-sm-2 col-xs-3">
-									<div class="hexagon-sm"></div>
+									<div class="hexagon-sm">
+										<div style="width: 100%; height: 100%; padding: 2% 5% 2% 5%">
+											<img src="../images/icons/g4317.png" style="width: 100%; height: 100%;">
+										</div>
+									</div>
 									<div class="hr">
 									    <div class="line"></div>
 									</div>
@@ -147,7 +160,11 @@
 							</div>
 							<div class="row push-right">
 								<div class="col-lg-2 col-sm-2 col-xs-3">
-									<div class="hexagon-sm"></div>
+									<div class="hexagon-sm">
+										<div style="width: 100%; height: 100%; padding: 2% 5% 2% 5%">
+											<img src="../images/icons/g4281.png" style="width: 100%; height: 100%;">
+										</div>
+									</div>
 									<div class="hr">
 									    <div class="line"></div>
 									</div>
@@ -158,7 +175,11 @@
 							</div>
 							<div class="row push-right">
 								<div class="col-lg-2 col-sm-2 col-xs-3">
-									<div class="hexagon-sm"></div>
+									<div class="hexagon-sm">
+										<div style="width: 100%; height: 100%; padding: 2% 5% 2% 5%">
+											<img src="../images/icons/g4321.png" style="width: 100%; height: 100%;">
+										</div>
+									</div>
 									<div class="hr">
 									    <div class="line"></div>
 									</div>
@@ -169,7 +190,11 @@
 							</div>
 							<div class="row push-right">
 								<div class="col-lg-2 col-sm-2 col-xs-3">
-									<div class="hexagon-sm"></div>
+									<div class="hexagon-sm">
+										<div style="width: 100%; height: 100%; padding: 2% 5% 2% 5%">
+											<img src="../images/icons/g4285.png" style="width: 100%; height: 100%;">
+										</div>
+									</div>
 
 								</div>
 								<div class="col-lg-10 col-sm-9 col-xs-9" style="padding-top: 10px;">
@@ -283,7 +308,7 @@
 <!-- /sixth section -->
 
 <!-- seventh section -->
-<div id="commodo" class="pad-section force-whitebg">
+<div id="commodo" class="force-whitebg">
 	<div class="col-lg-12">
 		<div class="container">
 			<div>
@@ -291,7 +316,9 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 							<div style="width: 100%; height: 50px;"></div>
-							<div class="hexagon-md" style="margin: 0 auto;"></div>	
+							<div class="hexagon-md" style="margin: 0 auto; padding: 2% 5% 2% 5%;">
+								<img src="../images/icons/g4749.png" style="width: 100%; height: 100%;">
+							</div>	
 							<div style="width: 100%; height: 30px;"></div>
 							<div class="font-red">DATABASE / <br />TALENT POOL</div>
 							<div class="col-lg-12">
@@ -302,7 +329,9 @@
 						</div>
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 							<div style="width: 100%; height: 50px;"></div>
-							<div class="hexagon-md" style="margin: 0 auto;"></div>	
+							<div class="hexagon-md" style="margin: 0 auto; padding: 2% 5% 2% 5%;">
+								<img src="../images/icons/g4789.png" style="width: 100%; height: 100%;">
+							</div>	
 							<div style="width: 100%; height: 30px;"></div>
 							<div class="font-red">PEER MENTORSHIP <br />PROGRAM</div>
 							<div class="col-lg-12">
@@ -314,7 +343,9 @@
 						
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 							<div style="width: 100%; height: 50px;"></div>
-							<div class="hexagon-md" style="margin: 0 auto;"></div>	
+							<div class="hexagon-md" style="margin: 0 auto; padding: 2% 5% 2% 5%;">
+								<img src="../images/icons/g4797.png" style="width: 100%; height: 100%;">
+							</div>	
 							<div style="width: 100%; height: 30px;"></div>
 							<div class="font-red">MATCH MAKING <br />FOR BUSINESS</div>
 							<div class="col-lg-12">
@@ -325,7 +356,9 @@
 						</div>
 						<div style="width: 100%; height: 50px;"></div>
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-							<div class="hexagon-md" style="margin: 0 auto;"></div>	
+							<div class="hexagon-md" style="margin: 0 auto; padding: 2% 5% 2% 5%;">
+								<img src="../images/icons/g4801.png" style="width: 100%; height: 100%;">
+							</div>	
 							<div style="width: 100%; height: 30px;"></div>
 							<div class="font-red">FEEDBACK <br />MECHANISM</div>
 							<div class="col-lg-12">
@@ -338,10 +371,12 @@
 					<div style="clear:both;"></div>
 				</div>
 				
-				<div class="col-lg-12 pad-section">
+				<div class="col-lg-12">
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="width: 100%; height: 50px;"></div>
-						<div class="hexagon-md" style="margin: 0 auto;"></div>	
+						<div class="hexagon-md" style="margin: 0 auto; padding: 2% 5% 2% 5%;">
+								<img src="../images/icons/g4817.png" style="width: 100%; height: 100%;">
+							</div>	
 						<div style="width: 100%; height: 30px;"></div>
 						<div class="font-red">EVENTS <br />JUSTO VENENATIS</div>
 						<div class="col-lg-12">
@@ -353,7 +388,9 @@
 					
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="width: 100%; height: 50px;"></div>
-						<div class="hexagon-md" style="margin: 0 auto;"></div>	
+						<div class="hexagon-md" style="margin: 0 auto; padding: 2% 5% 2% 5%;">
+								<img src="../images/icons/g4865.png" style="width: 100%; height: 100%;">
+							</div>	
 						<div style="width: 100%; height: 30px;"></div>
 						<div class="font-red">CROWD SOURCE <br />LOBBYING</div>
 						<div class="col-lg-12">
@@ -365,7 +402,9 @@
 					
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="width: 100%; height: 50px;"></div>
-						<div class="hexagon-md" style="margin: 0 auto;"></div>	
+						<div class="hexagon-md" style="margin: 0 auto; padding: 2% 5% 2% 5%;">
+								<img src="../images/icons/g4889.png" style="width: 100%; height: 100%;">
+							</div>	
 						<div style="width: 100%; height: 30px;"></div>
 						<div class="font-red">KNOWLEDGE <br />SHARING</div>
 						<div class="col-lg-12">
@@ -377,7 +416,9 @@
 					
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="width: 100%; height: 50px;"></div>
-						<div class="hexagon-md" style="margin: 0 auto;"></div>	
+						<div class="hexagon-md" style="margin: 0 auto; padding: 2% 5% 2% 5%;">
+								<img src="../images/icons/g4893.png" style="width: 100%; height: 100%;">
+							</div>	
 						<div style="width: 100%; height: 30px;"></div>
 						<div class="font-red">...AND MORE <br />LOREM LIGULA</div>
 						<div class="col-lg-12">
