--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -296,6 +296,7 @@
 
 	<!-- attach JavaScripts -->
 	<script src="../js/jquery-1.10.2.js"></script>
+	<script src="../js/verimail.jquery.min.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
 
 	<script src="../plugins/loader/pace.min.js"></script>
@@ -306,8 +307,10 @@
 	<script src="//maps.google.com/maps/api/js?sensor=true&key=AIzaSyAAarl7EUpxZrbx87JIZSbbONdMnJuvaEE"></script>
 
 	<!-- <script src="../plugins/loader/imagesloaded.pkgd.min.js"></script> -->
-
 	<script src="../js/main.js"></script>
+	<script src="../js/users.js"></script>
+	<script src="../js/google.js"></script>
+
 
 	<script>
 	  window.fbAsyncInit = function() {
