Finished Content Inline Editing

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,6 +14,7 @@
 <link href="../css/form-signin.css" rel="stylesheet" />
 <link href="../css/profile.css" rel="stylesheet" />
 <link href="../css/community.css" rel="stylesheet" />
+<link href="../css/googleapi-fonts.css" rel="stylesheet" />
 
 <!-- <link href="../plugins/owl/owl.carousel.css" rel="stylesheet" />
 <link href="../plugins/owl/owl.theme.css" rel="stylesheet" />
@@ -24,6 +25,10 @@
 <link href="../plugins/loader/minimal.css" rel="stylesheet" />
 
 <link rel="icon" type="image/png" href="../images/favicon.png" />
+
+<link href="../plugins/x-editable/bootstrap-editable.css" rel="stylesheet" />
+<link href="../plugins/x-editable/bootstrap-editable-x.css" rel="stylesheet" />
+<link href="../plugins/x-editable/bootstrap-wysihtml5-0.0.3.css" rel="stylesheet" />
 </head>
 <body>
 	<!-- <div id="page_loader" class="loader"></div> -->
@@ -174,12 +179,12 @@
 					Instagram
 				</div>
 				<div class="row" style="margin-top: 20px;">
-					<!-- <div
+					<div
 					  	class="fb-like"
 					  	data-share="true"
 					  	data-width="450"
 					  	data-show-faces="true">
-					</div> -->
+					</div>
 				</div> 
 			</div>
 			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 details">
@@ -294,25 +299,37 @@
 	  	</div>
 	</div>
 
+	
+
 	<!-- attach JavaScripts -->
 	<script src="../js/jquery-1.10.2.js"></script>
 	<script src="../js/verimail.jquery.min.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
+	<script src="../js/js.cookie.js"></script>
+	<script src="../js/autosize.min.js"></script>
+	<script src="../js/md5.min.js"></script>
 
 	<script src="../plugins/loader/pace.min.js"></script>
 	<!-- <script src="../plugins/owl/owl.carousel.min.js"></script> -->
 	<script src="../plugins/owl/owl.carousel.min.js"></script>
 	<!-- <script src="../plugins/backstretch/jquery.backstretch.min.js"></script> -->
 
-	<script src="//maps.google.com/maps/api/js?sensor=true&key=AIzaSyAAarl7EUpxZrbx87JIZSbbONdMnJuvaEE"></script>
+	<script src="../plugins/x-editable/bootstrap-editable.js"></script>
+	<script src="../plugins/x-editable/wysihtml5-0.3.0.min.js"></script>
+	<script src="../plugins/x-editable/bootstrap-wysihtml5-0.0.3.min.js"></script>
+	<script src="../plugins/x-editable/wysihtml5-0.0.3.js"></script>
+
+	<!-- <script src="//maps.google.com/maps/api/js?sensor=true&key=AIzaSyAAarl7EUpxZrbx87JIZSbbONdMnJuvaEE"></script> -->
 
 	<!-- <script src="../plugins/loader/imagesloaded.pkgd.min.js"></script> -->
+	<script src="../js/x-editable.js"></script>
 	<script src="../js/main.js"></script>
+	<script src="../js/admin.js"></script>
 	<script src="../js/users.js"></script>
-	<script src="../js/google.js"></script>
+	<!-- <script src="../js/google.js"></script> -->
 
 
-	<script>
+	<!-- <script>
 	  window.fbAsyncInit = function() {
 	    FB.init({
 	      appId      : '1327134493994900',
@@ -328,6 +345,6 @@
 	     js.src = "//connect.facebook.net/en_US/sdk.js";
 	     fjs.parentNode.insertBefore(js, fjs);
 	   }(document, 'script', 'facebook-jssdk'));
-	</script>
+	</script> -->
 </body>
 </html>
