--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,5 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,300);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+/*@import url(https://fonts.googleapis.com/css?family=Oswald:400,300);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);*/
+
+@import url(/public/css/googleapi-fonts.css);
 * {
     margin: 0;
 	padding: 0;
