--- a/public/css/style.css
+++ b/public/css/style.css
@@ -254,7 +254,7 @@ html, body {
   /*background-color: #306d9f;
   color: #ffffff;*/
 }
-#services .glyphicon {
+/*#services .glyphicon {
   border: 2px solid #FFFFFF;
   border-radius: 50%;
   display: inline-block;
@@ -264,7 +264,7 @@ html, body {
   text-align: center;
   vertical-align: middle;
   width: 140px;
-}
+}*/
 
 #information {
   background: url(../images/estate.jpg) no-repeat center center fixed; 
@@ -514,6 +514,7 @@ overflow: hidden;
   height: 86.60px;
   background-color: #1e475a;
   margin: 43.30px 0;
+  z-index: 1;
 }
 @media all and (max-device-width: 1024px){
     .hexagon-bg-2 {
@@ -1470,3 +1471,39 @@ END PANEL OPTIONS
     font-size: 87px;
 }
 
+
+.sticky-sidebar {
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 4em;
+    right: 0;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.3);
+    font-size: 12px;
+    padding: 1em;
+    text-align: right;
+    display: none;
+}
+
+.sticky-sidebar:hover {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #999;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 6px;
+    outline: 0;
+    -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+    box-shadow: 0 3px 9px rgba(0,0,0,.5);
+}
+@media (min-width: 768px)
+.modal-content {
+    -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    box-shadow: 0 5px 15px rgba(0,0,0,.5);
+}
