--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -302,6 +302,7 @@
 
 	<!-- attach JavaScripts -->
 	<script src="../js/jquery-1.10.2.js"></script>
+	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/verimail.jquery.min.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
 	<script src="../js/js.cookie.js"></script>
