Displaying all pages again

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -85,7 +85,7 @@
                                                     <a href="#" class="btn btn-default btn-sm">Change Passowrd</a>
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <a href="/logout" class="btn btn-default btn-sm pull-right">Sign Out</a>
+                                                    <a id="user_logout" class="btn btn-default btn-sm pull-right">Sign Out</a>
                                                 </div>
                                             </div>
                                         </div>
