--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -318,17 +318,17 @@
 	<script src="../plugins/x-editable/bootstrap-wysihtml5-0.0.3.min.js"></script>
 	<script src="../plugins/x-editable/wysihtml5-0.0.3.js"></script>
 
-	<!-- <script src="//maps.google.com/maps/api/js?sensor=true&key=AIzaSyAAarl7EUpxZrbx87JIZSbbONdMnJuvaEE"></script> -->
+	<script src="//maps.google.com/maps/api/js?sensor=true&key=AIzaSyAAarl7EUpxZrbx87JIZSbbONdMnJuvaEE"></script>
 
 	<!-- <script src="../plugins/loader/imagesloaded.pkgd.min.js"></script> -->
 	<script src="../js/x-editable.js"></script>
 	<script src="../js/main.js"></script>
 	<script src="../js/admin.js"></script>
 	<script src="../js/users.js"></script>
-	<!-- <script src="../js/google.js"></script> -->
+	<script src="../js/google.js"></script>
 
 
-	<!-- <script>
+	<script>
 	  window.fbAsyncInit = function() {
 	    FB.init({
 	      appId      : '1327134493994900',
@@ -344,6 +344,6 @@
 	     js.src = "//connect.facebook.net/en_US/sdk.js";
 	     fjs.parentNode.insertBefore(js, fjs);
 	   }(document, 'script', 'facebook-jssdk'));
-	</script> -->
+	</script>
 </body>
 </html>
